--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^13.4.0",
     "bulma": "^0.8.0",
+    "env-cmd": "^10.1.0",
     "gatsby": "^2.13.31",
     "gatsby-image": "^2.0.23",
     "gatsby-plugin-netlify": "^2.0.6",
@@ -16,6 +18,7 @@
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^3.1.6",
     "gatsby-remark-relative-images": "^0.3.0",
+    "gatsby-source-contentful": "^2.2.9",
     "gatsby-source-filesystem": "^2.0.26",
     "gatsby-transformer-remark": "^2.6.9",
     "gatsby-transformer-sharp": "^2.1.9",
@@ -40,7 +43,7 @@
     "clean": "gatsby clean",
     "start": "npm run develop",
     "build": "npm run clean && gatsby build",
-    "develop": "npm run clean && gatsby develop",
+    "develop": "GATSBY_GRAPHQL_IDE=playground env-cmd -f .env.development gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
