--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,20 @@
 {
-  "extends": "airbnb"
+  "extends": ["airbnb"],
+  "plugins": ["react", "prettier"],
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "rules": {
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js", "jsx"]
+      }
+    ],
+    "prettier/prettier": "warning",
+  }
 }
