--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "env-cmd": "^10.1.0",
     "gatsby": "^2.13.31",
     "gatsby-image": "^2.0.23",
+    "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-plugin-purgecss": "^4.0.0",
