--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "parser": "babel-eslint",
   "extends": ["airbnb"],
   "plugins": ["react", "prettier"],
   "parserOptions": {
@@ -9,12 +10,42 @@
     }
   },
   "rules": {
+    "comma-dangle": 1,
+    "indent": 1,
+    "semi": 1,
+    "max-len": 1,
+    "no-undef": 1,
+    "no-unused-vars": 1,
+    "no-unused-expressions": 1,
+    "arrow-parens": 1,
+    "prefer-template": 1,
+    "implicit-arrow-linebreak": 1,
+    "import/order": 1,
+    "import/no-extraneous-dependencies": 1,
+    "jsx-a11y/label-has-associated-control": 1,
+    "jsx-a11y/no-static-element-interactions": 1,
+    "jsx-a11y/click-events-have-key-events": 1,
+    "jsx-a11y/alt-text": 1,
+    "no-lone-blocks": 1,
+    "react/jsx-one-expression-per-line": 1,
+    "react/jsx-boolean-value": 1,
+    "react/jsx-curly-brace-presence": 1,
+    "react/jsx-curly-newline": 1,
+    "react/prefer-stateless-function": 1,
+    "react/no-unescaped-entities": 1,
+    "react/no-access-state-in-setstate": 1,
+    "react/jsx-indent-props": 1,
+    "react/jsx-closing-bracket-location": 1,
+    "react/jsx-indent": 1,
+    "react/jsx-closing-tag-location": 1,
+    "react/prop-types": 1,
+    "react/destructuring-assignment": 1,
     "react/jsx-filename-extension": [
       1,
       {
         "extensions": [".js", "jsx"]
       }
     ],
-    "prettier/prettier": "warning",
+    "prettier/prettier": 1
   }
 }
