--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
     "build": "npm run clean && gatsby build",
     "develop": "GATSBY_GRAPHQL_IDE=playground env-cmd -f .env.development gatsby develop",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . --fix"
+    "lint": "eslint src/**/*.jsx --fix"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-loader": "^4.0.2",
