update to new contentful space

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-plugin-purgecss": "^4.0.0",
     "gatsby-plugin-react-helmet": "^3.0.4",
+    "gatsby-plugin-s3": "^0.3.3",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-remark-copy-linked-files": "^2.0.7",
@@ -47,6 +48,7 @@
     "build": "npm run clean && gatsby build",
     "develop": "GATSBY_GRAPHQL_IDE=playground env-cmd -f .env.development gatsby develop",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "npm run build && gatsby-plugin-s3 deploy",
     "prettier": "prettier src/**/*.jsx",
     "prettier:write": "prettier src/**/*.jsx --write",
     "lint": "eslint src/**/*.jsx",
