modify to avoid page creation

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,8 @@
     "no-undef": 1,
     "prettier/prettier": 1,
     "react/no-unescaped-entities": 1,
-    "prefer-template": 1
+    "prefer-template": 1,
+    "react/jsx-props-no-spreading": 1,
+    "react/no-unused-state": 1
   }
 }
