--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
+    "semantic-ui-react": "^0.88.2",
     "uuid": "^7.0.0"
   },
   "keywords": [
