--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     "react/no-unescaped-entities": 1,
     "prefer-template": 1,
     "react/jsx-props-no-spreading": 1,
-    "react/no-unused-state": 1
+    "react/no-unused-state": 1,
+    "class-methods-use-this": 1
   }
 }
